--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:23:44 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:24:27 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -397,17 +397,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Robert MacIntyre +6
-Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
+      <td>Patrick Cantlay +7
 -1 thru 4</td>
+      <td class="greyout leftborder">Robert MacIntyre +7
++1 thru 1</td>
       <td class="greyout">Jon Rahm +8
 +1 thru 2</td>
     </tr>
@@ -797,15 +797,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">14</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
-      <td>Robert MacIntyre +6
-Not started</td>
       <td>Daniel Berger +7
 E thru 1</td>
+      <td>Robert MacIntyre +7
++1 thru 1</td>
       <td class="greyout leftborder">Jon Rahm +8
 +1 thru 2</td>
       <td class="greyout">Jordan Spieth
