--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:23:44 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:24:27 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -301,15 +301,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">14</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
-      <td>Robert MacIntyre +6
-Not started</td>
       <td>Daniel Berger +7
 E thru 1</td>
+      <td>Robert MacIntyre +7
++1 thru 1</td>
       <td class="greyout leftborder">Jon Rahm +8
 +1 thru 2</td>
       <td class="greyout">Jordan Spieth
