--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:29:28 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:30:11 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -249,7 +249,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +8
 +1 thru 2</td>
       <td class="greyout">Tyrrell Hatton +10
-+1 thru 5</td>
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -285,15 +285,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
-      <td>Russell Henley +7
-E thru 1</td>
+      <td>Russell Henley +6
+-1 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
