--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:32:20 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:33:03 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -312,8 +312,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
-      <td class="greyout">Jon Rahm +8
-+1 thru 2</td>
+      <td class="greyout">Jon Rahm +7
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -342,8 +342,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +8
-+1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm(W) +7
+E thru 3</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -408,8 +408,8 @@ Not started</td>
 -1 thru 4</td>
       <td class="greyout leftborder">Robert MacIntyre +7
 +1 thru 1</td>
-      <td class="greyout">Jon Rahm +8
-+1 thru 2</td>
+      <td class="greyout">Jon Rahm +7
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -444,6 +444,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Jon Rahm +7
+E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -6
@@ -454,26 +470,10 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
+      <td class="greyout leftborder">Jon Rahm(W) +7
+E thru 3</td>
+      <td class="greyout">Patrick Cantlay +7
 -1 thru 4</td>
-      <td class="greyout">Jon Rahm(W) +8
-+1 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -486,8 +486,8 @@ Not started</td>
 Not started</td>
       <td>Talor Gooch +3
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +8
-+1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm(W) +7
+E thru 3</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -502,8 +502,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay(W) +7
 -1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +7
+E thru 3</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -534,9 +534,25 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +7
+E thru 3</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">2</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners(W) -1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Jon Rahm +7
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -556,19 +572,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith -6
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">2</td>
+      <td>Scottie Scheffler -9
 Not started</td>
-      <td>Corey Conners(W) -1
+      <td>Rory McIlroy +1
 Not started</td>
-      <td>Will Zalatoris +2
+      <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
+      <td>Jon Rahm(W) +7
+E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -586,22 +602,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Tiger Woods(W) +6
 -1 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">3</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm(W) +8
-+1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -653,15 +653,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm(W) +8
-+1 thru 2</td>
+      <td>Jon Rahm(W) +7
+E thru 3</td>
       <td class="greyout leftborder">Bubba Watson +9
 +1 thru 3</td>
       <td class="greyout">Jordan Spieth
@@ -669,15 +669,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Tiger Woods +6
 -1 thru 2</td>
-      <td>Jon Rahm(W) +8
-+1 thru 2</td>
+      <td>Jon Rahm(W) +7
+E thru 3</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -685,15 +685,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Jon Rahm(W) +8
-+1 thru 2</td>
+      <td>Jon Rahm(W) +7
+E thru 3</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -716,6 +716,38 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Jon Rahm +7
+E thru 3</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Jon Rahm(W) +7
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">12</td>
       <td>Rory McIlroy(W) +1
@@ -726,40 +758,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 2</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm(W) +8
-+1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
+      <td class="greyout leftborder">Jon Rahm +7
+E thru 3</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -774,8 +774,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +7
+E thru 3</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -806,9 +806,25 @@ Not started</td>
 -1 thru 2</td>
       <td>Robert MacIntyre +7
 +1 thru 1</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +7
+E thru 3</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">14</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Patrick Cantlay(W) +7
+-1 thru 4</td>
+      <td>Jon Rahm +7
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -822,38 +838,22 @@ Not started</td>
 -1 thru 2</td>
       <td>Patrick Cantlay +7
 -1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 2</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">15</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Patrick Cantlay(W) +7
--1 thru 4</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
+      <td class="greyout leftborder">Jon Rahm +7
+E thru 3</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td>Patrick Reed +4
 Not started</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
+      <td>Jon Rahm +7
+E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -861,15 +861,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">15</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
+      <td>Jon Rahm(W) +7
+E thru 3</td>
       <td>Patrick Cantlay +7
 -1 thru 4</td>
-      <td>Jon Rahm(W) +8
-+1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -877,15 +877,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">17</td>
       <td>Collin Morikawa(W) +1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 4</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
+      <td>Jon Rahm +7
+E thru 3</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">20</td>
+      <td class="bigbold">19</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Tony Finau +4
 Not started</td>
+      <td>Jon Rahm(W) +7
+E thru 3</td>
       <td>Patrick Cantlay +7
 -1 thru 4</td>
-      <td>Jon Rahm(W) +8
-+1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">21</td>
+      <td class="bigbold">20</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 4</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
+      <td>Jon Rahm +7
+E thru 3</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
