--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:32:20 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:33:03 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -205,15 +205,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
+      <td>Jon Rahm +7
+E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -244,10 +244,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Patrick Cantlay +7
+      <td>Jon Rahm +7
+E thru 3</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 2</td>
       <td class="greyout">Tyrrell Hatton +10
 +1 thru 6</td>
     </tr>
@@ -308,24 +308,24 @@ Not started</td>
 Not started</td>
       <td>Daniel Berger +6
 -1 thru 2</td>
-      <td>Robert MacIntyre +7
+      <td>Jon Rahm +7
+E thru 3</td>
+      <td class="greyout leftborder">Robert MacIntyre +7
 +1 thru 1</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+1 thru 2</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td>Patrick Reed +4
 Not started</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
+      <td>Jon Rahm +7
+E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">20</td>
+      <td class="bigbold">19</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Tony Finau +4
 Not started</td>
+      <td>Jon Rahm(W) +7
+E thru 3</td>
       <td>Patrick Cantlay +7
 -1 thru 4</td>
-      <td>Jon Rahm(W) +8
-+1 thru 2</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">21</td>
+      <td class="bigbold">20</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 4</td>
-      <td>Jon Rahm +8
-+1 thru 2</td>
+      <td>Jon Rahm +7
+E thru 3</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
