--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:41:39 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:42:22 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -167,7 +167,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Russell Henley +6
--1 thru 2</td>
+-1 thru 3</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -183,7 +183,7 @@ Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td class="greyout leftborder">Tyrrell Hatton +10
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -509,15 +509,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 5</td>
-      <td>Billy Horschel +11
-+1 thru 6</td>
+      <td>Billy Horschel +10
+E thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
