--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:59:35 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:00:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -265,7 +265,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau +4
 Not started</td>
       <td class="greyout">Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -279,7 +279,7 @@ Not started</td>
       <td>Dustin Johnson(W) +1
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -327,7 +327,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -359,7 +359,7 @@ Not started</td>
       <td>Robert MacIntyre +5
 -1 thru 4</td>
       <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout">Jon Rahm +7
 E thru 4</td>
     </tr>
@@ -391,7 +391,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -437,7 +437,7 @@ Not started</td>
       <td>Matthew Fitzpatrick +4
 Not started</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -473,7 +473,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +7
 E thru 4</td>
       <td class="greyout">Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -499,7 +499,7 @@ Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td>Billy Horschel +9
 -1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -517,7 +517,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Patrick Cantlay(W) +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +7
 E thru 4</td>
       <td class="greyout">Sam Burns
@@ -565,7 +565,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -773,7 +773,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +7
 E thru 4</td>
       <td class="greyout">Jordan Spieth
@@ -789,7 +789,7 @@ Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +7
 E thru 4</td>
       <td class="greyout">Xander Schauffele
@@ -803,7 +803,7 @@ Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td>Adam Scott +12
 E thru 8</td>
       <td class="greyout leftborder">Brooks Koepka(W)
@@ -819,7 +819,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Patrick Cantlay(W) +7
--1 thru 6</td>
+-1 thru 7</td>
       <td>Jon Rahm +7
 E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -837,7 +837,7 @@ Not started</td>
       <td>Daniel Berger +6
 -1 thru 4</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +7
 E thru 4</td>
       <td class="greyout">Xander Schauffele
@@ -869,7 +869,7 @@ Not started</td>
       <td>Jon Rahm(W) +7
 E thru 4</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -883,7 +883,7 @@ Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td>Jon Rahm +7
 E thru 4</td>
       <td class="greyout leftborder">Paul Casey
@@ -901,7 +901,7 @@ Not started</td>
       <td>Jon Rahm(W) +7
 E thru 4</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -915,7 +915,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Patrick Cantlay +7
--1 thru 6</td>
+-1 thru 7</td>
       <td>Jon Rahm +7
 E thru 4</td>
       <td class="greyout leftborder">Jordan Spieth(W)
