--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:01:01 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:01:44 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -422,8 +422,8 @@ Not started</td>
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
-      <td class="greyout leftborder">Tiger Woods +7
-E thru 4</td>
+      <td class="greyout leftborder">Tiger Woods +8
++1 thru 5</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -600,8 +600,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
-      <td class="greyout">Tiger Woods(W) +7
-E thru 4</td>
+      <td class="greyout">Tiger Woods(W) +8
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -614,8 +614,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Tiger Woods +7
-E thru 4</td>
+      <td class="greyout leftborder">Tiger Woods +8
++1 thru 5</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -684,22 +684,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">7</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Jon Rahm(W) +7
-E thru 5</td>
-      <td>Tiger Woods +7
-E thru 4</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">7</td>
       <td>Shane Lowry -2
@@ -713,6 +697,22 @@ Not started</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">8</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Jon Rahm(W) +7
+E thru 5</td>
+      <td>Tiger Woods +8
++1 thru 5</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
