--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:03:53 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:04:36 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -620,22 +620,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">4</td>
-      <td>Shane Lowry(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Joaquin Niemann +4
-Not started</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">5</td>
       <td>Corey Conners -1
@@ -665,6 +649,22 @@ E thru 5</td>
       <td class="greyout leftborder">Bubba Watson +9
 +1 thru 6</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">5</td>
+      <td>Shane Lowry(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Joaquin Niemann +5
++1 thru 1</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
