--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:03:53 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:04:36 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -184,8 +184,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
-      <td class="greyout">Joaquin Niemann +4
-Not started</td>
+      <td class="greyout">Joaquin Niemann +5
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
