--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:06:45 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:07:28 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -646,8 +646,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) +7
 E thru 5</td>
-      <td class="greyout leftborder">Bubba Watson +9
-+1 thru 6</td>
+      <td class="greyout leftborder">Bubba Watson +8
+E thru 7</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
