--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:17:30 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:18:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,8 +166,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +6
--1 thru 5</td>
+      <td class="greyout leftborder">Russell Henley +5
+-2 thru 6</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -357,7 +357,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Robert MacIntyre +5
--1 thru 4</td>
+-1 thru 5</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 7</td>
       <td class="greyout">Jon Rahm +7
@@ -620,6 +620,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">4</td>
+      <td>Shane Lowry(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Joaquin Niemann +4
+E thru 2</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">5</td>
       <td>Corey Conners -1
@@ -649,22 +665,6 @@ E thru 6</td>
       <td class="greyout leftborder">Bubba Watson +8
 E thru 7</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">5</td>
-      <td>Shane Lowry(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Joaquin Niemann +5
-+1 thru 1</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -739,7 +739,7 @@ Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Robert MacIntyre +5
--1 thru 4</td>
+-1 thru 5</td>
       <td>Daniel Berger +6
 -1 thru 5</td>
       <td class="greyout leftborder">Jon Rahm +7
