--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:17:30 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:18:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -184,8 +184,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
-      <td class="greyout">Joaquin Niemann +5
-+1 thru 1</td>
+      <td class="greyout">Joaquin Niemann +4
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -268,6 +268,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">6</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Dustin Johnson +1
+Not started</td>
+      <td>Russell Henley +5
+-2 thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">6</td>
       <td>Justin Thomas(W) -1
@@ -284,22 +300,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Dustin Johnson +1
-Not started</td>
-      <td>Russell Henley +6
--1 thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">11</td>
       <td>Corey Conners(W) -1
@@ -307,7 +307,7 @@ Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Robert MacIntyre +5
--1 thru 4</td>
+-1 thru 5</td>
       <td>Daniel Berger +6
 -1 thru 5</td>
       <td class="greyout leftborder">Jon Rahm +7
