--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:18:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:19:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -294,23 +294,23 @@ Not started</td>
 Not started</td>
       <td>Tony Finau +4
 Not started</td>
-      <td class="greyout leftborder">Daniel Berger +6
--1 thru 5</td>
+      <td class="greyout leftborder">Daniel Berger +7
+E thru 6</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Robert MacIntyre +5
 -1 thru 5</td>
-      <td>Daniel Berger +6
--1 thru 5</td>
-      <td class="greyout leftborder">Jon Rahm +7
+      <td>Jon Rahm +7
+E thru 6</td>
+      <td class="greyout leftborder">Daniel Berger +7
 E thru 6</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
